Update: version de historial en perfil